{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 26,
  "lineage": "f198b836-e90c-b012-3910-3c76e62f98ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698415300126:internet-gateway/igw-0b9c0135eaef0cbc5",
            "id": "igw-0b9c0135eaef0cbc5",
            "owner_id": "698415300126",
            "tags": {
              "Name": "AWS Live Series With HashiCorp-internet-gateway"
            },
            "tags_all": {
              "Name": "AWS Live Series With HashiCorp-internet-gateway",
              "primary_owner": "Harsh Goel",
              "project_name": "AWS Live Series With HashiCorp",
              "secondary_owner": "Arjun Goel"
            },
            "vpc_id": "vpc-0f0c7a00ab031fa65"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9c0135eaef0cbc5",
            "id": "r-rtb-0c40c0907e91f79ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c40c0907e91f79ad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698415300126:route-table/rtb-0c40c0907e91f79ad",
            "id": "rtb-0c40c0907e91f79ad",
            "owner_id": "698415300126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "AWS Live Series With HashiCorp-public-route-table"
            },
            "tags_all": {
              "Name": "AWS Live Series With HashiCorp-public-route-table",
              "primary_owner": "Harsh Goel",
              "project_name": "AWS Live Series With HashiCorp",
              "secondary_owner": "Arjun Goel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c7a00ab031fa65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07df8f464503e509b",
            "route_table_id": "rtb-0c40c0907e91f79ad",
            "subnet_id": "subnet-06d8c3fb292d7aa21"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698415300126:subnet/subnet-06d8c3fb292d7aa21",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d8c3fb292d7aa21",
            "ipv6_cidr_block": "2600:1f18:1750:9700::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0e473d76602733201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698415300126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS Live Series With HashiCorp-public-us-east-1a"
            },
            "tags_all": {
              "Name": "AWS Live Series With HashiCorp-public-us-east-1a",
              "primary_owner": "Harsh Goel",
              "project_name": "AWS Live Series With HashiCorp",
              "secondary_owner": "Arjun Goel"
            },
            "vpc_id": "vpc-0f0c7a00ab031fa65"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698415300126:vpc/vpc-0f0c7a00ab031fa65",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.255.0.0/20",
            "default_network_acl_id": "acl-047e51b93f5a2ddc0",
            "default_route_table_id": "rtb-0465a61557f0390c6",
            "default_security_group_id": "sg-0e28970e5b98b616b",
            "dhcp_options_id": "dopt-0d74ffbdc72266986",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f0c7a00ab031fa65",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-016a4b5fd79d27e4c",
            "ipv6_cidr_block": "2600:1f18:1750:9700::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0465a61557f0390c6",
            "owner_id": "698415300126",
            "tags": {
              "Name": "terraform_aws_vpc"
            },
            "tags_all": {
              "Name": "terraform_aws_vpc",
              "primary_owner": "Harsh Goel",
              "project_name": "AWS Live Series With HashiCorp",
              "secondary_owner": "Arjun Goel"
            }
          }
        }
      ]
    }
  ]
}